Fix input for export-final-release
Previously export-final-release would use a task file from bosh-master.
This commit pulls in bosh-src so that the task file can be used from
that resource instead. We feel this will help clarify the different use
cases for bosh-master vs bosh-src in the pipeline.

Co-authored-by: Belinda Liu <bliu@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -534,6 +534,7 @@ jobs:
     plan:
     - aggregate:
       - get: bosh-master
+      - get: bosh-src
       - get: candidate-version
         passed: [finalize-bosh-release]
         trigger: true
