Specify ruby version in gemfile
[#164713288](https://www.pivotaltracker.com/story/show/164713288)

Co-authored-by: Belinda Liu <bliu@pivotal.io>

--- a/src/Gemfile
+++ b/src/Gemfile
@@ -1,5 +1,7 @@
 source 'https://rubygems.org'
 
+ruby '2.6.3'
+
 gem 'bosh-core', path: 'bosh-core'
 gem 'bosh-director', path: 'bosh-director'
 gem 'bosh-director-core', path: 'bosh-director-core'
