Allow deploy director task to implement upgrades
Adds the director-state input to deploy-director so the state can be
read optionally, to allow for an upgrade where the bosh-release input
changes.

--- a/ci/bats/tasks/deploy-director.yml
+++ b/ci/bats/tasks/deploy-director.yml
@@ -13,6 +13,8 @@ inputs:
 - name: bosh-deployment
 - name: bosh-release
 - name: stemcell
+- name: director-state
+  optional: true # chain tasks for upgrades
 
 params:
   DEPLOY_ARGS: ""
