Use a cache between deploy director task runs

--- a/ci/bats/tasks/deploy-director.yml
+++ b/ci/bats/tasks/deploy-director.yml
@@ -16,6 +16,9 @@ inputs:
 - name: director-state
   optional: true # chain tasks for upgrades
 
+caches:
+- path: cache-dot-bosh-dir
+
 params:
   DEPLOY_ARGS: ""
   BAT_INFRASTRUCTURE: ""
